data/derived/sp14/progs/unify/prog4256.ml.out
Characters 29-34:
  let fixpoint (f,b) = wwhile (h b f
                               ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
